# simple-model-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.py
src/: model.h
